--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,11 @@
+name = "python-src-gen"
+version = "0.1.0"
+description = """
+Generates stub python source files to check dev tools for "big projects"
+handling.
+"""
+license = "CC BY-NC-ND 4.0"
+
 [build-system]
 requires = ["poetry"]
 build-backend = "poetry.masonry.api"
